--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -33,8 +33,10 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   dbt_northwind:
     # Applies to all files under models/example/
-    example:
-      +materialized: table
+    staging: 
+      erp_northwind:
+        +materialized: view
+    
 
 
 
